@@ -19,7 +19,7 @@ rquotad, rpc.rquotad \- remote quota server
 .IX  "remote procedure call services"  "rquotad"  ""  "\fLrquotad\fP \(em remote quota server"
 .B rquotad
 is an
-.BR rpc (3N)
+.BR rpc (3)
 server which returns quotas for a user of a local filesystem
 which is mounted by a remote machine over the
 .SM NFS\s0.
@@ -89,7 +89,7 @@ default filesystems
 .PD
 .SH "SEE ALSO"
 .BR quota (1),
-.BR rpc (3N),
+.BR rpc (3),
 .BR nfs (5),
 .BR services (5),
 .BR inetd (8)
